...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/start_stop_activity"
    tools:context=".StartStopSearchActivity">

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A564E7"
        android:onClick="onStartClick"
        android:text="@string/start"
        android:textColor="@color/black"
...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A564E7"
        android:onClick="onStopClick"
        android:text="@string/stop"
        android:textColor="@color/black"
...
